--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ nbproject/*
 *.metadata
 *.DS_Store
 includes/Smarty/template_c/*
+/Applications/MAMP/htdocs/tedxEventManager/projet_mi/includes/Smarty/template_c/*
